# feup-da-proj1

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
datasets/default/: carrinhas.txt  encomendas.txt
datasets/doubled/: encomendas.txt
includes/: constants.hpp  dataset.hpp  delivery.hpp  order.hpp  scenario1.hpp  scenario2.hpp  scenario3.hpp  scenarios.hpp  simulation.hpp  ui.hpp  utils.hpp  van.hpp
report/: DA – Projeto 1 G12.pptx  report.pptx
src/: dataset.cpp  delivery.cpp  main.cpp  order.cpp  scenario1.cpp  scenario2.cpp  scenario3.cpp  scenarios.cpp  ui.cpp  utils.cpp  van.cpp
